# segments

./: .codecov.yml  .coveragerc  .gitignore  .travis.yml  CHANGES.md  CONTRIBUTING.md  MANIFEST.in  README.md  README.rst  RELEASING.md  dev-requirements.txt  faq.md  setup.cfg  setup.py  tox.ini
.github/workflows/: python-package.yml
segments/: __init__.py  __main__.py  cli.py  context_tokenizer.py  errors.py  tokenizer.py  tree.py  util.py
segments/scripts/: context_tokenizer.py  create_profiles.py  tokenize.py
segments/tests/: test.prf  test.rules  test_cli.py  test_scripts_create_profiles.py  test_tokenizer.py
src/segments/: __init__.py  __main__.py  cli.py  errors.py  metadata.py  profile.py  tokenizer.py  tree.py  util.py
tests/: conftest.py  test_cli.py  test_profile.py  test_tokenizer.py  test_tree.py
tests/data/: profile.csv  profile.json  profile_without_rules.prf  test.prf
