[metadata]
license_file = LICENSE

[bdist_wheel]
universal = 1

[tool:pytest]
minversion = 5
testpaths = tests
addopts = --cov
filterwarnings =
    error
    ignore::UserWarning

[flake8]
ignore = E126,E128
max-line-length = 100
exclude = docs, .tox

[coverage:run]
source =
    segments
    tests

[coverage:report]
show_missing = true
