[metadata]
name = segments
version = 2.3.0
author = Steven Moran and Robert Forkel
author_email = dlce.rdm@eva.mpg.de
description = Segmentation with orthography profiles
long_description = file: README.md
long_description_content_type = text/markdown
keywords =
    linguistics
    tokenizer
license = Apache 2.0
license_files = LICENSE
url = https://github.com/cldf/segments
project_urls =
    Bug Tracker = https://github.com/cldf/segments/issues
platforms = any
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    License :: OSI Approved :: Apache Software License

[options]
zip_safe = False
packages = find:
package_dir =
    = src
python_requires = >=3.8
install_requires =
    regex
    csvw>=1.5.6

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    segments = segments.__main__:main

[options.extras_require]
dev =
    flake8
    wheel
    build
    twine
test =
    pytest>=5
    pytest-mock
    pytest-cov

[bdist_wheel]
universal = 1

[tool:pytest]
minversion = 5
testpaths = tests
addopts = --cov
filterwarnings =
    error
    ignore::UserWarning

[flake8]
ignore = E126,E128
max-line-length = 100
exclude = docs, .tox

[coverage:run]
source =
    segments
    tests

[coverage:report]
show_missing = true
skip_covered = true

[tox:tox]
envlist = py38, py39, py310, py311, py312, py313
isolated_build = true
skip_missing_interpreter = true

[testenv]
deps = .[test]
commands = pytest -m "not integration" {posargs}
